updated code of cancel services
