# storage/api-docs/api-docs.json
@@ -1679,58 +1679,6 @@
                     }
                 }
             }
-        },
-        "/service-redeem": {
-            "post": {
-                "tags": [
-                    "Order Details"
-                ],
-                "summary": "For Service Redeem ",
-                "operationId": "4869a6e0fc39c9dc02bdc665e093ecaa",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "order_id": {
-                                        "type": "string",
-                                        "example": "ORD-66c4697701bed-JQZAn"
-                                    },
-                                    "comments": {
-                                        "type": "string",
-                                        "example": "I Want To Redeem My Service"
-                                    },
-                                    "number_of_session": {
-                                        "type": "flout",
-                                        "example": "1"
-                                    },
-                                    "service_id": {
-                                        "type": "integer",
-                                        "example": "1"
-                                    },
-                                    "user_token": {
-                                        "type": "string",
-                                        "example": "FOREVER-MEDSPA"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Result Found"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    }
-                }
-            }
         }
     },
     "components": {
